# PolyVecMesh

./: .gitignore  LICENSE  README.md  pyproject.toml
PolyVecMesh/: PolyVecMesh.py  __init__.py
examples/: coil_top.py  coil_top_debug.py  conductor_coil.py  motorBike.py
examples/debug/: debugPoints.py  debugVTK.py
examples/resources/: conductor_coil.vtm  motorBike.vtm  topview.vtm
examples/resources/conductor_coil/: conductor_coil_0_0.vtu  conductor_coil_1_0.vtu  conductor_coil_2_0.vtu
examples/resources/motorBike/: motorBike_0_0.vtu
examples/resources/topview/: topview_0_0.vtu
