[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PolyVecMesh"
version = "0.1.0"
description = "Slice and visualize polyhedral/hexahedral CFD meshes as vector graphics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name="Finn E.", email="currencyfinn@gmail.com" }
]
keywords = ["CFD", "openfoam", "mesh", "paraview", "vectorgraphic"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "xml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
platforms = ["Linux", "Windows"]
zip-safe = true  

[project.urls]
Homepage = "https://github.com/CurrencyFinn/PolyVecMesh"
Documentation = "https://github.com/CurrencyFinn/PolyVecMesh#readme"
Source = "https://github.com/CurrencyFinn/PolyVecMesh"

